--- a/index.html
+++ b/index.html
@@ -260,6 +260,16 @@
                         </a>
                     </li>-->
 					<li class="item coding">
+						<a href="./meritzem/">
+							<img src="img/thumb_meritz.png" alt="">
+							<span class="icon"></span>
+							<span>
+								<strong>메리츠 채용</strong>
+								<em>웹퍼블리싱</em>
+							</span>
+						</a>
+					</li>    
+					<li class="item coding">
 						<a href="./airic/">
 							<img src="img/thumb_inc.png" alt="">
 							<span class="icon"></span>
