--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </a>
                     </li>-->
 					<li class="item coding">
-						<a href="./meritzem/">
+						<a href="https://recruit.meritzfire.com/new/main.do">
 							<img src="img/thumb_meritz.png" alt="">
 							<span class="icon"></span>
 							<span>
