--- a/index.html
+++ b/index.html
@@ -260,6 +260,36 @@
                         </a>
                     </li>-->
 					<li class="item coding">
+						<a href="https://routefinding.kr/">
+							<img src="img/thumb_route.png" alt="">
+							<span class="icon"></span>
+							<span>
+								<strong>루트파인딩</strong>
+								<em>VUE.JS 개발</em>
+							</span>
+						</a>
+					</li>    
+					<li class="item coding">
+						<a href="https://taekang.shop/">
+							<img src="img/thumb_taekang.png" alt="">
+							<span class="icon"></span>
+							<span>
+								<strong>태강가설</strong>
+								<em>VUE.JS 개발</em>
+							</span>
+						</a>
+					</li>    
+					<li class="item coding">
+						<a href="https://calcul-f8059.web.app">
+							<img src="img/thumb_run.jpg" alt="">
+							<span class="icon"></span>
+							<span>
+								<strong>러닝 계산기</strong>
+								<em>VUE.JS 개발</em>
+							</span>
+						</a>
+					</li>    
+					<li class="item coding">
 						<a href="https://recruit.meritzfire.com/new/main.do">
 							<img src="img/thumb_meritz.png" alt="">
 							<span class="icon"></span>
