--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta http-equiv="refresh" content="0; url=https://home2025-22182.web.app/portfolio"></meta>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>CODE TREE</title>
@@ -260,7 +261,7 @@
                         </a>
                     </li>-->
 					<li class="item coding">
-						<a href="https://routefinding.kr/">
+						<a href="https://routefinding.kr/" >
 							<img src="img/thumb_route.png" alt="">
 							<span class="icon"></span>
 							<span>
