--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta http-equiv="refresh" content="0; url=https://home2025-22182.web.app/"></meta>
+	<!-- <meta http-equiv="refresh" content="0; url=https://home2025-22182.web.app/"></meta> -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>CODE TREE</title>
